# BBGym

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  test-pure.yml
case/: 5.txt
include/problem_parser/: problemParser.cpp
include/search_modules/: CBFSImpl.h  Searcher.h  searchMod.h
include/search_modules/strategy_providers/: PlainLabeler.cpp  PlainLabeler.h
include/user_def/: oneRjSumCjNode.h  oneRjSumCjPrune.cpp  oneRjSumCjPrune.h  oneRjSumCjSearch.cpp  oneRjSumCjSearch.h  oneRjSumCj_engine.cpp  oneRjSumCj_engine.h
include/util/: config.h  types.h
pybind/: base.cpp
src/: main.cpp  main.py
